# Atlas

./: COMPREHENSIVE_REVIEW.md  INSTALL.md  README.md  USAGE.md  WINDOWS_SETUP.md  WSL_SETUP.md  __init__.py  app.py  config.py  logger.py  pyproject.toml  requirements.txt
.env/: pyvenv.cfg
brain/: __init__.py  agent.py  chat.py  errors.py  intent.py  ollama.py  parser.py  prompts.py  sanitize.py
cli/: __init__.py  app.py  approval.py  display.py
jarvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
memory/: __init__.py  database.py  embeddings.py  history.py  rag.py  vector_store.py
safety/: __init__.py  audit.py  paths.py  permissions.py  validator.py  whitelist.py
tools/: __init__.py  analyzer.py  commands.py  dispatcher.py  documents.py  executor.py  files.py  filesystem.py  projects.py  refactor.py  register_tools.py  registry.py  scaffold.py  search.py  secretary.py
ui/: __init__.py  app.py  dialogs.py
