[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.2.0"
description = "Local AI workspace assistant powered by Ollama — file management, document intelligence, memory, and RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
jarvis = "jarvis.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]
exclude = ["jarvis.egg-info*", "logs*"]

[tool.setuptools.package-data]
jarvis = ["config.yaml", "logs/.gitkeep"]